Implemented "Color Surface By" option in mesh editors.  Also added  generics to several classes.
git-svn-id: svn://svn.code.sf.net/p/aoi/code@109 8e91ba97-c92a-0410-817f-f646a3b87f38